--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,8 @@ typings/
 .nuxt
 dist
 
+samples/
+
 # Gatsby files
 .cache/
 # Comment in the public line in if your project uses Gatsby and *not* Next.js
@@ -102,3 +104,7 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Editor
+.idea/
+.vs/
